Emulated parallel tool calls for o3-mini and gemini